--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -160,6 +160,9 @@
   <ItemGroup>
     <ClCompile Include="GameMain.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Constants.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
