--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -240,6 +240,7 @@
     <ClCompile Include="GameState\PauseState.cpp" />
     <ClCompile Include="GameState\PlayingState.cpp" />
     <ClCompile Include="Game\Game.cpp" />
+    <ClCompile Include="Utils\KeyboardHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
@@ -248,6 +249,7 @@
     <ClInclude Include="GameState\PauseState.h" />
     <ClInclude Include="GameState\PlayingState.h" />
     <ClInclude Include="Game\Game.h" />
+    <ClInclude Include="Utils\KeyboardHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
