--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -158,6 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Actor\Snake\Snake.cpp" />
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="GameState\GameState.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
@@ -244,6 +245,7 @@
     <ClCompile Include="View\BackGround.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actor\Snake\Snake.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="GameState\GameState.h" />
     <ClInclude Include="GameState\MainMenuState.h" />
