move fonts into one place

--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -553,6 +553,7 @@
       <AdditionalIncludeDirectories>D:\Development\XYZ\Lessons\SnakeGame\\SFML\SFML-2.5.1\include;</AdditionalIncludeDirectories>
       <LinkCompiled>true</LinkCompiled>
     </ClCompile>
+    <ClCompile Include="View\Fonts\Fonts.cpp" />
     <ClCompile Include="View\ScoreTopPanel\ScoreTopPanel.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -573,6 +574,7 @@
     <ClInclude Include="Utils\KeyboardHelper.h" />
     <ClInclude Include="Utils\Math.h" />
     <ClInclude Include="View\Background\BackGround.h" />
+    <ClInclude Include="View\Fonts\Fonts.h" />
     <ClInclude Include="View\ScoreTopPanel\ScoreTopPanel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
