--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -475,9 +475,9 @@
       <AdditionalIncludeDirectories>D:\Development\XYZ\Lessons\SnakeGame\\SFML\SFML-2.5.1\include;</AdditionalIncludeDirectories>
       <LinkCompiled>true</LinkCompiled>
     </ClCompile>
-    <ClCompile Include="Game\GameState\SaveRecordInputName.cpp" />
+    <ClCompile Include="Game\GameState\RecordScreenState.cpp" />
+    <ClCompile Include="Game\GameState\SaveRecordInputNameState.cpp" />
     <ClCompile Include="Game\GameState\SaveRecordState.cpp" />
-    <ClCompile Include="Score\Score.cpp" />
     <ClCompile Include="Utils\KeyboardHelper.cpp" />
     <ClCompile Include="Utils\Math.cpp" />
     <ClCompile Include="View\Background\BackGround.cpp">
@@ -581,9 +581,10 @@
     <ClInclude Include="Game\GameState\MainMenuState.h" />
     <ClInclude Include="Game\GameState\PauseState.h" />
     <ClInclude Include="Game\GameState\PlayingState.h" />
-    <ClInclude Include="Game\GameState\SaveRecordInputName.h" />
+    <ClInclude Include="Game\GameState\RecordScreenState.h" />
+    <ClInclude Include="Game\GameState\SaveRecordInputNameState.h" />
     <ClInclude Include="Game\GameState\SaveRecordState.h" />
-    <ClInclude Include="Score\Score.h" />
+    <ClInclude Include="Score\ScoreTable.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Utils\KeyboardHelper.h" />
     <ClInclude Include="Utils\Math.h" />
