add a score record table view

--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -558,10 +558,12 @@
       <LinkCompiled>true</LinkCompiled>
     </ClCompile>
     <ClCompile Include="View\BasePopupContainer\BasePopupContainer.cpp" />
+    <ClCompile Include="View\CommonRecordsView\CommonRecordView.cpp" />
     <ClCompile Include="View\DifficultyScreenView\DifficultyScreenView.cpp" />
     <ClCompile Include="View\FinishGamePopup\FinishGamePopup.cpp" />
     <ClCompile Include="View\Fonts\Fonts.cpp" />
     <ClCompile Include="View\MainMenuView\MainMenuView.cpp" />
+    <ClCompile Include="View\RecordScreenView\RecordScreenVIew.cpp" />
     <ClCompile Include="View\SaveRecordEnterName\SaveRecordInputNameView.cpp" />
     <ClCompile Include="View\SaveRecordQuestionPopup\SaveRecordQuestionPopup.cpp" />
     <ClCompile Include="View\ScoreTopPanel\ScoreTopPanel.cpp" />
@@ -590,10 +592,12 @@
     <ClInclude Include="Utils\Math.h" />
     <ClInclude Include="View\Background\BackGround.h" />
     <ClInclude Include="View\BasePopupContainer\BasePopupContainer.h" />
+    <ClInclude Include="View\CommonRecordsView\CommonRecordView.h" />
     <ClInclude Include="View\DifficultyScreenView\DifficultyScreenView.h" />
     <ClInclude Include="View\FinishGamePopup\FinishGamePopup.h" />
     <ClInclude Include="View\Fonts\Fonts.h" />
     <ClInclude Include="View\MainMenuView\MainMenuView.h" />
+    <ClInclude Include="View\RecordScreenView\RecordScreenVIew.h" />
     <ClInclude Include="View\SaveRecordEnterName\SaveRecordInputNameView.h" />
     <ClInclude Include="View\SaveRecordQuestionPopup\SaveRecordQuestionPopup.h" />
     <ClInclude Include="View\ScoreTopPanel\ScoreTopPanel.h" />
