--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -478,6 +478,7 @@
     <ClCompile Include="Game\GameState\RecordScreenState.cpp" />
     <ClCompile Include="Game\GameState\SaveRecordInputNameState.cpp" />
     <ClCompile Include="Game\GameState\SaveRecordState.cpp" />
+    <ClCompile Include="Game\GameState\SettingsScreenState.cpp" />
     <ClCompile Include="Utils\KeyboardHelper.cpp" />
     <ClCompile Include="Utils\Math.cpp" />
     <ClCompile Include="View\Background\BackGround.cpp">
@@ -567,6 +568,7 @@
     <ClCompile Include="View\SaveRecordEnterName\SaveRecordInputNameView.cpp" />
     <ClCompile Include="View\SaveRecordQuestionPopup\SaveRecordQuestionPopup.cpp" />
     <ClCompile Include="View\ScoreTopPanel\ScoreTopPanel.cpp" />
+    <ClCompile Include="View\SettingsScreenView\SettingsScreenView.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor\Apple\Apple.h" />
@@ -586,7 +588,9 @@
     <ClInclude Include="Game\GameState\RecordScreenState.h" />
     <ClInclude Include="Game\GameState\SaveRecordInputNameState.h" />
     <ClInclude Include="Game\GameState\SaveRecordState.h" />
+    <ClInclude Include="Game\GameState\SettingsScreenState.h" />
     <ClInclude Include="Score\ScoreTable.h" />
+    <ClInclude Include="Sound\SoundSettings.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Utils\KeyboardHelper.h" />
     <ClInclude Include="Utils\Math.h" />
@@ -601,6 +605,7 @@
     <ClInclude Include="View\SaveRecordEnterName\SaveRecordInputNameView.h" />
     <ClInclude Include="View\SaveRecordQuestionPopup\SaveRecordQuestionPopup.h" />
     <ClInclude Include="View\ScoreTopPanel\ScoreTopPanel.h" />
+    <ClInclude Include="View\SettingsScreenView\SettingsScreenView.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
