--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -480,6 +480,7 @@
     <ClCompile Include="Game\GameState\SaveRecordState.cpp" />
     <ClCompile Include="Game\GameState\SettingsScreenState.cpp" />
     <ClCompile Include="Sound\SoundResources.cpp" />
+    <ClCompile Include="Texture\Textures.cpp" />
     <ClCompile Include="Utils\KeyboardHelper.cpp" />
     <ClCompile Include="Utils\Math.cpp" />
     <ClCompile Include="View\Background\BackGround.cpp">
@@ -593,6 +594,7 @@
     <ClInclude Include="Score\ScoreTable.h" />
     <ClInclude Include="Sound\SoundResources.h" />
     <ClInclude Include="Sound\SoundSettings.h" />
+    <ClInclude Include="Texture\Textures.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Utils\KeyboardHelper.h" />
     <ClInclude Include="Utils\Math.h" />
