--- a/SnakeGame/SnakeGame.vcxproj
+++ b/SnakeGame/SnakeGame.vcxproj
@@ -479,6 +479,7 @@
     <ClCompile Include="Game\GameState\SaveRecordInputNameState.cpp" />
     <ClCompile Include="Game\GameState\SaveRecordState.cpp" />
     <ClCompile Include="Game\GameState\SettingsScreenState.cpp" />
+    <ClCompile Include="Persistence\ScoreTablePersistence.cpp" />
     <ClCompile Include="Sound\SoundResources.cpp" />
     <ClCompile Include="Texture\Textures.cpp" />
     <ClCompile Include="Utils\KeyboardHelper.cpp" />
@@ -592,6 +593,7 @@
     <ClInclude Include="Game\GameState\SaveRecordInputNameState.h" />
     <ClInclude Include="Game\GameState\SaveRecordState.h" />
     <ClInclude Include="Game\GameState\SettingsScreenState.h" />
+    <ClInclude Include="Persistence\ScoreTablePersistence.h" />
     <ClInclude Include="Score\ScoreTable.h" />
     <ClInclude Include="Sound\SoundResources.h" />
     <ClInclude Include="Sound\SoundSettings.h" />
